# taskmanager

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  nginx.conf  pyproject.toml
alembic/: env.py
alembic/versions/: 202605100001_initial.py
src/: __init__.py  main.py
src/bot/: app.py  dependencies.py  handlers.py  keyboards.py  states.py
src/core/: config.py  database.py  dependencies.py  exceptions.py  redis.py  repository.py
src/frontend/: index.html
src/tasks/: __init__.py  dependencies.py  enums.py  models.py  repository.py  router.py  schemas.py  service.py
src/users/: __init__.py  dependencies.py  models.py  repository.py  router.py  schemas.py  service.py
src/worker/: celery_app.py  database.py  tasks.py
